# paper

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: __init__.py  health.py  jobs.py  projects.py  templates.py
backend/app/constants/: prompts.py
backend/app/models/: core.py
backend/app/security/: __init__.py  latex.py
backend/app/services/: bib_manager.py  citation_detector.py  citation_inserter.py  diff_engine.py  ingest.py  jobs.py  latex_builder.py  pandoc_wrapper.py  preflight.py  reference_retriever.py  renderer.py  runtime.py  storage.py  structure_analyzer.py
backend/app/tasks/: __init__.py  celery_app.py  pipeline.py
backend/app/utils/: id.py
examples/: sample.md
examples/output/: README.md
frontend/: .eslintrc.json  next.config.mjs  package.json  playwright.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: JobLogViewer.tsx  MarkdownEditor.tsx  PreflightTable.tsx  ReferenceList.tsx  TemplateSelector.tsx
frontend/lib/: api.ts  types.ts
frontend/styles/: globals.css
frontend/tests/: e2e.spec.ts
infra/: Dockerfile  Dockerfile.frontend  Makefile
infra/pandoc/: filters.yaml
infra/scripts/: install-texlive.sh
templates/: registry.json
templates/Generic-Article/: main.tex.j2
templates/IEEEtran/: main.tex.j2
tests/backend/: conftest.py  test_bib_manager.py  test_llm_client.py  test_pipeline_integration.py  test_reference_retriever.py
(+6 files in other folders)
