[tool.poetry]
name = "manuweaver"
version = "0.1.0"
description = "End-to-end manuscript formatting and compilation system"
authors = ["ManuWeaver Team <team@example.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
celery = "^5.3.6"
redis = "^5.0.1"
python-dotenv = "^1.0.1"
rapidfuzz = "^3.6.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
respx = "^0.20.2"
pytest-playwright = "^0.4.4"
vcrpy = "^5.1.0"
ruff = "^0.4.4"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
